@@ -1,3 +1,8 @@
+2023-07-03  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (remote-file-name-access-timeout): Declare.
+	(tramp-test18-file-attributes): Extend test.
+
 2023-06-28  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test34-connection-local-variables)
